--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ github:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Park-Sang-gil
-  email: fkdl3919@icloud.com # change to your email address
+  name: gil
+  email: fkdl3919@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     # - https://twitter.com/username # change to your twitter homepage
@@ -89,7 +89,7 @@ pageviews:
 #     light — Use the light color scheme
 #     dark — Use the dark color scheme
 #
-theme_mode: light # [light | dark]
+theme_mode: # [light | dark]
 
 # The CDN endpoint for media resources.
 # Notice that once it is assigned, the CDN url
@@ -196,6 +196,7 @@ defaults:
 
 sass:
   style: compressed
+  quietDeps: true
 
 compress_html:
   clippings: all
